// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCustomMetricIndicatorAggregation should generate a aggregation for good events 1`] = `
Object {
  "_good_A": Object {
    "aggs": Object {
      "metric": Object {
        "sum": Object {
          "field": "total",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "_good_B": Object {
    "aggs": Object {
      "metric": Object {
        "sum": Object {
          "field": "processed",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "A": "_good_A>metric",
        "B": "_good_B>metric",
      },
      "script": Object {
        "lang": "painless",
        "source": "params.A - params.B",
      },
    },
  },
}
`;

exports[`getCustomMetricIndicatorAggregation should generate a aggregation for total events 1`] = `
Object {
  "_total_A": Object {
    "aggs": Object {
      "metric": Object {
        "sum": Object {
          "field": "total",
        },
      },
    },
    "filter": Object {
      "match_all": Object {},
    },
  },
  "totalEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "A": "_total_A>metric",
      },
      "script": Object {
        "lang": "painless",
        "source": "params.A",
      },
    },
  },
}
`;

exports[`getCustomMetricIndicatorAggregation should generate a doc_count aggregation 1`] = `
Object {
  "_good_A": Object {
    "filter": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "outcome": "success",
                  },
                },
              ],
            },
          },
        ],
        "must": Array [],
        "must_not": Array [],
        "should": Array [],
      },
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "A": "_good_A>_count",
      },
      "script": Object {
        "lang": "painless",
        "source": "params.A",
      },
    },
  },
}
`;

exports[
  `getCustomMetricIndicatorAggregation should include the filter when provided on a metric 1`
] = `
Object {
  "_good_A": Object {
    "aggs": Object {
      "metric": Object {
        "sum": Object {
          "field": "total",
        },
      },
    },
    "filter": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "bool": Object {
              "minimum_should_match": 1,
              "should": Array [
                Object {
                  "match": Object {
                    "outcome": "success",
                  },
                },
              ],
            },
          },
        ],
        "must": Array [],
        "must_not": Array [],
        "should": Array [],
      },
    },
  },
  "goodEvents": Object {
    "bucket_script": Object {
      "buckets_path": Object {
        "A": "_good_A>metric",
      },
      "script": Object {
        "lang": "painless",
        "source": "params.A",
      },
    },
  },
}
`;
